# CUDA-Fluid-Dynamics

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/fluid_sim/: cuda_compat.hpp  simulation.hpp  spatial_hashing.hpp  types.hpp
src/: bindings.cpp  simulation.cpp
src/kernels/: simulation.cu  simulation.cuh
tests/: manual_testing.ipynb  test_spatial_hashing.py  test_step.py
